# study-room-booking-lite

./: .dockerignore  .gitignore  Dockerfile  README.md  ci.yml  cli.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  usage.md
.github/workflows/: ci.yml
app/: ai_chat.py  emailer.py  main.py  seed.py  storage.py
data/: bookings.json  errors.ndjson  rooms.json
tests/: test_app_import.py  test_cli_help.py  test_smoke.py
web/: index.html
